--- a/discord_netprot/discord_netprot/package.json
+++ b/discord_netprot/discord_netprot/package.json
@@ -11,20 +11,25 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
+    "socket.io-client": "^4.7.5",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.2",
     "typescript": "~5.4.0",
     "vite": "^5.2.11",
-    "vue-tsc": "^2.0.11"
+    "vue-tsc": "^2.0.11",
+    "webpack": "^5.91.0"
   }
 }
