--- a/discord_netprot/discord_netprot/package.json
+++ b/discord_netprot/discord_netprot/package.json
@@ -14,14 +14,18 @@
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
+    "@types/simple-peer": "^9.11.8",
     "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
