--- a/discord_netprot/discord_netprot/tsconfig.json
+++ b/discord_netprot/discord_netprot/tsconfig.json
@@ -7,5 +7,11 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+    "compilerOptions": {
+      // Other compiler options...
+      "typeRoots": ["node_modules/@types", "src/types"]
+  }
+  
 }
+
